Inicio de Flask
Adaptación de la página web para poder funcionar en Flask y comienzo de la aplicación en Flask

--- a/Website/templates/index.html
+++ b/Website/templates/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>WonderCoins</title>
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="icon" href="../img/WONDERLOGO_sin%20letras-0.jpg">
-    <link rel="stylesheet" href="../css/index.css"
+    <link rel="stylesheet" href="../static/main.css">
+    <link rel="icon" href="../static/WONDERLOGO_sin%20letras-0.jpg">
+    <link rel="stylesheet" href="../static/index.css">
 </head>
 <body>
     <header>
         <h1>WonderCoins</h1>
         <h2>Web en proceso</h2>
-        <img src="../img/logo-letras-sinfondo.png" alt="WonderCoins" id="logo">
+        <img src="../static/logo-letras-sinfondo.png" alt="WonderCoins" id="logo">
     </header>
     <div id="contenido">
         <p>Esta es la página web principal del proyecto WonderCoins.</p>
