--- a/Website/templates/index.html
+++ b/Website/templates/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../static/main.css">
     <link rel="icon" href="../static/WONDERLOGO_sin%20letras-0.jpg">
     <link rel="stylesheet" href="../static/index.css">
+    {{ mapa.js }}
 </head>
 <body>
     <header>
@@ -16,6 +17,7 @@
     <div id="contenido">
         <p>Esta es la página web principal del proyecto WonderCoins.</p>
         <p>Más información en breve.</p>
+        {{ mapa.html }}
     </div>
     <footer>
         <p>Trabajo realizado por Ángel Vila Vidal</p>
