Finish main page and start search
Starting the catalogue webpage and finishing up the home page

--- a/Website/templates/inicio.html
+++ b/Website/templates/inicio.html
@@ -4,23 +4,31 @@
     <div class="grid grid-cols-2 m-5">
         <div class="grid grid-rows-2 m-5">
             <img class="mx-auto w-1/2" src={{ imagen }} alt="Bienvenido"/>
-            <a href=""><p class="text-center text-3xl">{{ moneda["section_id"] }}</p></a>
+            <a href="" class="h-min"><p class="text-center text-3xl">{{ moneda["section_id"] }}</p></a>
         </div>
         <div class="grid grid-rows-2 m-5">
-            <p class="text-justify font-josefin">WONDERCOINS es una plataforma online para la investigación académica y
-                para la gestión, preservación y difusión del patrimonio numismático de la antigua Hispania, enmarcándose
-                en una activa línea internacional de impulso a las Humanidades digitales para la sociedad. Es una
-                herramienta pensada para su aplicación al estudio de múltiples realidades arqueológicas concretas, de
-                manera que proporciona de forma continua novedosos resultados de investigación.
-                <br>
-                Ante esto, WONDERCOINS aporta el cuerpo documental y gráfico necesario para poder acometer en clave
-                diacrónica el estudio arqueológico y numismático del litoral sur de la Península Ibérica y sus
-                territorios de influencia en la Antigüedad. El análisis de la circulación monetaria del arco
-                atlántico-mediterráneo hispano permite identificar rutas comerciales principales y secundarias,
-                terrestres, fluviales y marítimas, así como ayudar a definir las vías y medios de transporte de
-                personas, bienes y mercancías, detectando momentos de mayor florecimiento o depresión, divisando
-                periodos de crisis, conflicto o bonanza de ciudades ubicadas en el eje del fretum gaditanum que fue un
-                espacio fundamental para el intercambio de recursos durante la Antigüedad.</p>
+            <div class="bg-wondercoins  bg-contain bg-no-repeat bg-center">
+                <p class="text-center font-josefin">WONDERCOINS es una plataforma online para la investigación académica
+                    y
+                    para la gestión, preservación y difusión del patrimonio numismático de la antigua Hispania,
+                    enmarcándose
+                    en una activa línea internacional de impulso a las Humanidades digitales para la sociedad. Es una
+                    herramienta pensada para su aplicación al estudio de múltiples realidades arqueológicas concretas,
+                    de
+                    manera que proporciona de forma continua novedosos resultados de investigación.
+                    <br>
+                    <br>
+                    Ante esto, WONDERCOINS aporta el cuerpo documental y gráfico necesario para poder acometer en clave
+                    diacrónica el estudio arqueológico y numismático del litoral sur de la Península Ibérica y sus
+                    territorios de influencia en la Antigüedad. El análisis de la circulación monetaria del arco
+                    atlántico-mediterráneo hispano permite identificar rutas comerciales principales y secundarias,
+                    terrestres, fluviales y marítimas, así como ayudar a definir las vías y medios de transporte de
+                    personas, bienes y mercancías, detectando momentos de mayor florecimiento o depresión, divisando
+                    periodos de crisis, conflicto o bonanza de ciudades ubicadas en el eje del fretum gaditanum que fue
+                    un
+                    espacio fundamental para el intercambio de recursos durante la Antigüedad.</p>
+            </div>
+            <div class="inline-block h-min"><hr></div>
         </div>
     </div>
 
