--- a/Website/static/src/tail.css
+++ b/Website/static/src/tail.css
@@ -2264,6 +2264,21 @@ html{
   justify-content: flex-end;
 }
 
+.range{
+  height: 1.5rem;
+  width: 100%;
+  cursor: pointer;
+  -webkit-appearance: none;
+  --range-shdw: var(--bc);
+  overflow: hidden;
+  background-color: transparent;
+  border-radius: var(--rounded-box, 1rem);
+}
+
+.range:focus{
+  outline: none;
+}
+
 .select{
   display: inline-flex;
   flex-shrink: 0;
@@ -3160,6 +3175,58 @@ body[dir="rtl"] .checkbox:checked,
   }
 }
 
+.range:focus-visible::-webkit-slider-thumb{
+  --focus-shadow: 0 0 0 6px hsl(var(--b1)) inset, 0 0 0 2rem hsl(var(--range-shdw)) inset;
+}
+
+.range:focus-visible::-moz-range-thumb{
+  --focus-shadow: 0 0 0 6px hsl(var(--b1)) inset, 0 0 0 2rem hsl(var(--range-shdw)) inset;
+}
+
+.range::-webkit-slider-runnable-track{
+  height: 0.5rem;
+  width: 100%;
+  border-radius: var(--rounded-box, 1rem);
+  background-color: hsla(var(--bc) / 0.1);
+}
+
+.range::-moz-range-track{
+  height: 0.5rem;
+  width: 100%;
+  border-radius: var(--rounded-box, 1rem);
+  background-color: hsla(var(--bc) / 0.1);
+}
+
+.range::-webkit-slider-thumb{
+  background-color: hsl(var(--b1));
+  position: relative;
+  height: 1.5rem;
+  width: 1.5rem;
+  border-style: none;
+  border-radius: var(--rounded-box, 1rem);
+  -webkit-appearance: none;
+  top: 50%;
+  color: hsl(var(--range-shdw));
+  transform: translateY(-50%);
+  --filler-size: 100rem;
+  --filler-offset: 0.6rem;
+  box-shadow: 0 0 0 3px hsl(var(--range-shdw)) inset, var(--focus-shadow, 0 0), calc(var(--filler-size) * -1 - var(--filler-offset)) 0 0 var(--filler-size);
+}
+
+.range::-moz-range-thumb{
+  background-color: hsl(var(--b1));
+  position: relative;
+  height: 1.5rem;
+  width: 1.5rem;
+  border-style: none;
+  border-radius: var(--rounded-box, 1rem);
+  top: 50%;
+  color: hsl(var(--range-shdw));
+  --filler-size: 100rem;
+  --filler-offset: 0.5rem;
+  box-shadow: 0 0 0 3px hsl(var(--range-shdw)) inset, var(--focus-shadow, 0 0), calc(var(--filler-size) * -1 - var(--filler-offset)) 0 0 var(--filler-size);
+}
+
 @-webkit-keyframes rating-pop{
   0%{
     transform: translateY(-0.125em);
@@ -3342,40 +3409,8 @@ body[dir="rtl"] .checkbox:checked,
   height: 100vh;
 }
 
-.h-48{
-  height: 12rem;
-}
-
 .h-1\/6{
   height: 16.666667%;
-}
-
-.h-1\/3{
-  height: 33.333333%;
-}
-
-.h-auto{
-  height: auto;
-}
-
-.h-1\/2{
-  height: 50%;
-}
-
-.h-fit{
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
-}
-
-.h-min{
-  height: -webkit-min-content;
-  height: -moz-min-content;
-  height: min-content;
-}
-
-.h-4\/6{
-  height: 66.666667%;
 }
 
 .h-5\/6{
@@ -3388,16 +3423,32 @@ body[dir="rtl"] .checkbox:checked,
   height: max-content;
 }
 
+.h-min{
+  height: -webkit-min-content;
+  height: -moz-min-content;
+  height: min-content;
+}
+
+.h-48{
+  height: 12rem;
+}
+
 .max-h-full{
   max-height: 100%;
 }
 
-.w-10{
-  width: 2.5rem;
+.w-2\/3{
+  width: 66.666667%;
 }
 
 .w-80{
   width: 20rem;
+}
+
+.w-max{
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
 }
 
 .w-1\/2{
@@ -3412,16 +3463,12 @@ body[dir="rtl"] .checkbox:checked,
   width: 40%;
 }
 
-.w-5\/6{
-  width: 83.333333%;
-}
-
 .w-auto{
   width: auto;
 }
 
-.w-2\/3{
-  width: 66.666667%;
+.w-5\/12{
+  width: 41.666667%;
 }
 
 .max-w-xs{
@@ -3434,6 +3481,11 @@ body[dir="rtl"] .checkbox:checked,
 
 .flex-grow{
   flex-grow: 1;
+}
+
+.columns-2{
+  -moz-columns: 2;
+       columns: 2;
 }
 
 .grid-cols-2{
@@ -3493,29 +3545,32 @@ body[dir="rtl"] .checkbox:checked,
 }
 
 .bg-wondercoins{
-  background-image: ../static/logo-sinletras-sinfondo.jpg;
+  background-image: url('../WONDERLOGO_sin%20letras-sinfondo.png');
 }
 
-.bg-\[url\(\)\]{
-  background-image: url();
+.bg-cover{
+  background-size: cover;
 }
 
-.bg-\[url\(\.\.\\static\\logo-sinletras-sinfondo\.jpg\)\]{
-  background-image: url(..\static\logo-sinletras-sinfondo.jpg);
+.bg-contain{
+  background-size: contain;
 }
 
-.bg-\[url\(\.\.\/static\/logo-sinletras-sinfondo\.jpg\)\]{
-  background-image: url(../static/logo-sinletras-sinfondo.jpg);
+.bg-fixed{
+  background-attachment: fixed;
 }
 
-.object-cover{
-  -o-object-fit: cover;
-     object-fit: cover;
+.bg-center{
+  background-position: center;
 }
 
-.object-scale-down{
-  -o-object-fit: scale-down;
-     object-fit: scale-down;
+.bg-no-repeat{
+  background-repeat: no-repeat;
+}
+
+.object-contain{
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .p-10{
