--- a/Website/templates/base.html
+++ b/Website/templates/base.html
@@ -25,7 +25,7 @@
                     </div>
                 </div>
             </header>
-            <div class="content flex-grow">
+            <div class="flex-grow">
                 {% block content %}{% endblock %}
             </div>
             <footer class="footer p-10 bg-neutral text-neutral-content">
