--- a/Website/templates/searchbar.html
+++ b/Website/templates/searchbar.html
@@ -16,18 +16,20 @@
         </select>
     </div>
     <div class="columns-2 align-content-end m-top-5">
-        {% for i in range(10) %}
+        {% for i in range(1, 11) %}
             <div>
-        <div class="card card-side bg-base-100 shadow-xl h-48 w-auto m-5 inline-block">
-            <figure class="h-48 w-auto object-contain"><img src="../static/logo-sinletras-sinfondo.jpg"
-                                                            class="h-48" alt="Movie"/>
-            </figure>
-            <div class="card-body">
-                <h2 class="card-title">New movie is released!</h2>
-                <p>Click the button to watch on Jetflix app.</p>
+                <div class="card card-side bg-base-100 shadow-xl h-48 w-auto m-5">
+                    <figure class="h-44 w-auto object-contain"><img src="../static/logo-sinletras-sinfondo.jpg"
+                                                                    class="h-44" alt="Movie"/>
+                        <img src="../static/logo-sinletras-sinfondo.jpg"
+                                                                    class="h-44" alt="Movie"/>
+                    </figure>
+                    <div class="card-body">
+                        <h2 class="card-title">{{ i }}</h2>
+                        <p>Click the button to watch on Jetflix app.</p>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
         {% endfor %}
     </div>
 
