--- a/Website/static/src/tail.css
+++ b/Website/static/src/tail.css
@@ -1855,6 +1855,13 @@ html{
   flex-grow: 1;
 }
 
+.card-actions{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  gap: 0.5rem;
+}
+
 .card figure{
   display: flex;
   align-items: center;
@@ -2523,12 +2530,25 @@ html{
   outline-offset: 2px;
 }
 
+.btn-primary{
+  --tw-border-opacity: 1;
+  border-color: hsl(var(--p) / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: hsl(var(--p) / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: hsl(var(--pc) / var(--tw-text-opacity));
+}
+
 .btn-primary:hover, 
     .btn-primary.btn-active{
   --tw-border-opacity: 1;
   border-color: hsl(var(--pf, var(--p)) / var(--tw-border-opacity));
   --tw-bg-opacity: 1;
   background-color: hsl(var(--pf, var(--p)) / var(--tw-bg-opacity));
+}
+
+.btn-primary:focus-visible{
+  outline: 2px solid hsl(var(--p));
 }
 
 .btn-secondary:hover, 
@@ -3495,6 +3515,41 @@ body[dir="rtl"] .checkbox:checked,
   margin-right: auto;
 }
 
+.my-5{
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+}
+
+.mx-20{
+  margin-left: 5rem;
+  margin-right: 5rem;
+}
+
+.mx-40{
+  margin-left: 10rem;
+  margin-right: 10rem;
+}
+
+.my-2{
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.mx-80{
+  margin-left: 20rem;
+  margin-right: 20rem;
+}
+
+.mx-3{
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
+}
+
+.my-3{
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+}
+
 .block{
   display: block;
 }
@@ -3537,6 +3592,30 @@ body[dir="rtl"] .checkbox:checked,
   height: 11rem;
 }
 
+.h-1\/3{
+  height: 33.333333%;
+}
+
+.h-1\/2{
+  height: 50%;
+}
+
+.h-auto{
+  height: auto;
+}
+
+.h-2\/3{
+  height: 66.666667%;
+}
+
+.h-3\/4{
+  height: 75%;
+}
+
+.h-full{
+  height: 100%;
+}
+
 .w-2\/3{
   width: 66.666667%;
 }
@@ -3559,6 +3638,10 @@ body[dir="rtl"] .checkbox:checked,
 
 .w-auto{
   width: auto;
+}
+
+.w-96{
+  width: 24rem;
 }
 
 .max-w-xs{
@@ -3590,6 +3673,10 @@ body[dir="rtl"] .checkbox:checked,
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
+.grid-cols-3{
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
 .grid-rows-2{
   grid-template-rows: repeat(2, minmax(0, 1fr));
 }
@@ -3602,6 +3689,14 @@ body[dir="rtl"] .checkbox:checked,
   flex-direction: column;
 }
 
+.justify-end{
+  justify-content: flex-end;
+}
+
+.gap-5{
+  gap: 1.25rem;
+}
+
 .gap-x-4{
   -moz-column-gap: 1rem;
        column-gap: 1rem;
@@ -3609,6 +3704,15 @@ body[dir="rtl"] .checkbox:checked,
 
 .gap-y-10{
   row-gap: 2.5rem;
+}
+
+.gap-x-5{
+  -moz-column-gap: 1.25rem;
+       column-gap: 1.25rem;
+}
+
+.gap-y-0{
+  row-gap: 0px;
 }
 
 .overflow-hidden{
@@ -3661,6 +3765,15 @@ body[dir="rtl"] .checkbox:checked,
 
 .p-4{
   padding: 1rem;
+}
+
+.py-5{
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.pt-10{
+  padding-top: 2.5rem;
 }
 
 .text-center{
