--- a/Website/templates/base.html
+++ b/Website/templates/base.html
@@ -28,7 +28,7 @@
                     </div>
                 </div>
             </header>
-            <div class="flex-grow">
+            <div class="flex-grow mx-80 my-2">
                 {% block content %}{% endblock %}
             </div>
             <footer class="footer p-10 bg-neutral text-neutral-content">
