--- a/Website/templates/moneda.html
+++ b/Website/templates/moneda.html
@@ -7,15 +7,15 @@
         </h1>
         <div class="grid grid-cols-4 gap-x-4 gap-y-10">
             <div class="row-span-3">
-                <img src="../static/logo-sinletras-sinfondo.jpg"/>
+                <img src="{{ moneda.get("image_obverse") }}" alt="../static/logo-sinletras-sinfondo.jpg"/>
             </div>
             <div class="row-span-3">
-                <img src="../static/logo-sinletras-sinfondo.jpg"/>
+                <img src="{{ moneda.get("image_reverse") }}" alt="../static/logo-sinletras-sinfondo.jpg"/>
             </div>
             <div>
                 <h2>Número</h2>
                 <hr>
-                <p>{{ moneda["section_id"] }}</p>
+                <p>{{ moneda.get("number") }}</p>
             </div>
             <div>
                 <h2>Otra Numeración</h2>
@@ -28,17 +28,38 @@
             </div>
             <div>
                 <h2>URI</h2>
+                <hr>
             </div>
             <div>
                 <h2>Lugar del Hallazgo</h2>
+                <hr>
+                <p>{{ moneda.get("findspot") }}</p>
             </div>
             <div>
                 <h2>Excavación</h2>
+                <hr>
             </div>
-            <h2>Peso</h2>
-            <h2>Diámetro</h2>
-            <h2>Cuños</h2>
-            <h2>Desgaste</h2>
+            <div>
+                <h2>Peso</h2>
+                <hr>
+                <p>{{ moneda.get("weight") }}</p>
+            </div>
+            <div>
+                <h2>Diámetro</h2>
+                <hr>
+                <p>{{ moneda.get("diameter") }}</p>
+            </div>
+            <div>
+                <h2>Cuños</h2>
+                <hr>
+                <p>{{ moneda.get("dies") }}</p>
+            </div>
+            <div>
+                <h2>Desgaste</h2>
+                <hr>
+                <p></p>
+            </div>
+
         </div>
         <br>
         <br>
