--- a/Website/templates/tipo.html
+++ b/Website/templates/tipo.html
@@ -65,17 +65,20 @@
     </div>
     <h1 class="text-2xl pt-10">Monedas:</h1>
     <div class="grid grid-cols-3 gap-x-5 gap-y-0">
-    {% for i in tipo.get("monedas") %}
-        <div class="card card-compact w-auto h-1/2 bg-base-100 shadow-xl">
-            <figure class="h-1/2">
-                <img class="h-full" src="{{ i.get("image_obverse") }}" alt="/../static/logo-sinletras-sinfondo.jpg"/>
-                <img class="h-full" src="{{ i.get("image_reverse") }}" alt="/../static/logo-sinletras-sinfondo.jpg"/>
-            </figure>
-            <div class="card-body">
-                <h2 class="card-title">{{ i.get("section_id") }} - {{ i.get("mint")[0] }} - {{ i.get("catalogue_type_mint")[0] }}</h2>
-                <a href="/moneda/{{  i.get("section_id")  }}"><p>Más información</p></a>
+        {% for i in tipo.get("monedas") %}
+            <div class="card card-compact w-auto h-1/2 bg-base-100 shadow-xl">
+                <figure class="h-1/2">
+                    <img class="h-full" src="{{ i.get("image_obverse") }}"
+                         alt="/../static/logo-sinletras-sinfondo.jpg"/>
+                    <img class="h-full" src="{{ i.get("image_reverse") }}"
+                         alt="/../static/logo-sinletras-sinfondo.jpg"/>
+                </figure>
+                <div class="card-body">
+                    <h2 class="card-title">{{ i.get("section_id") }} - {{ i.get("mint")[0] }}
+                        - {{ i.get("catalogue_type_mint")[0] }}</h2>
+                    <a href="/moneda/{{ i.get("section_id") }}"><p>Más información</p></a>
+                </div>
             </div>
-        </div>
-    {% endfor %}
+        {% endfor %}
     </div>
 {% endblock %}
