--- a/Website/static/src/tail.css
+++ b/Website/static/src/tail.css
@@ -3625,10 +3625,6 @@ body[dir="rtl"] .checkbox:checked,
   display: block;
 }
 
-.inline-block{
-  display: inline-block;
-}
-
 .flex{
   display: flex;
 }
@@ -3671,6 +3667,10 @@ body[dir="rtl"] .checkbox:checked,
   height: 100%;
 }
 
+.h-auto{
+  height: auto;
+}
+
 .w-2\/3{
   width: 66.666667%;
 }
@@ -3695,6 +3695,10 @@ body[dir="rtl"] .checkbox:checked,
   width: auto;
 }
 
+.w-1\/3{
+  width: 33.333333%;
+}
+
 .max-w-xs{
   max-width: 20rem;
 }
@@ -3705,11 +3709,6 @@ body[dir="rtl"] .checkbox:checked,
 
 .cursor-pointer{
   cursor: pointer;
-}
-
-.columns-2{
-  -moz-columns: 2;
-       columns: 2;
 }
 
 .grid-cols-2{
@@ -3726,10 +3725,6 @@ body[dir="rtl"] .checkbox:checked,
 
 .grid-cols-3{
   grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
-.grid-rows-2{
-  grid-template-rows: repeat(2, minmax(0, 1fr));
 }
 
 .flex-row{
