--- a/Website/static/src/tail.css
+++ b/Website/static/src/tail.css
@@ -3582,16 +3582,6 @@ body[dir="rtl"] .checkbox:checked,
   height: auto;
 }
 
-.h-min{
-  height: -webkit-min-content;
-  height: -moz-min-content;
-  height: min-content;
-}
-
-.h-48{
-  height: 12rem;
-}
-
 .h-60{
   height: 15rem;
 }
@@ -3604,6 +3594,24 @@ body[dir="rtl"] .checkbox:checked,
   height: 100%;
 }
 
+.h-min{
+  height: -webkit-min-content;
+  height: -moz-min-content;
+  height: min-content;
+}
+
+.h-48{
+  height: 12rem;
+}
+
+.h-2\/3{
+  height: 66.666667%;
+}
+
+.h-1\/3{
+  height: 33.333333%;
+}
+
 .w-2\/3{
   width: 66.666667%;
 }
@@ -3614,6 +3622,10 @@ body[dir="rtl"] .checkbox:checked,
 
 .w-full{
   width: 100%;
+}
+
+.w-auto{
+  width: auto;
 }
 
 .w-1\/2{
@@ -3632,10 +3644,6 @@ body[dir="rtl"] .checkbox:checked,
   width: 25%;
 }
 
-.w-auto{
-  width: auto;
-}
-
 .max-w-xs{
   max-width: 20rem;
 }
@@ -3648,8 +3656,16 @@ body[dir="rtl"] .checkbox:checked,
   cursor: pointer;
 }
 
+.list-disc{
+  list-style-type: disc;
+}
+
 .grid-cols-2{
   grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-cols-3{
+  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
 .grid-cols-4{
@@ -3660,25 +3676,12 @@ body[dir="rtl"] .checkbox:checked,
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
-.grid-cols-3{
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
 .flex-col{
   flex-direction: column;
 }
 
 .gap-5{
   gap: 1.25rem;
-}
-
-.gap-x-4{
-  -moz-column-gap: 1rem;
-       column-gap: 1rem;
-}
-
-.gap-y-10{
-  row-gap: 2.5rem;
 }
 
 .gap-x-5{
@@ -3688,6 +3691,15 @@ body[dir="rtl"] .checkbox:checked,
 
 .gap-y-0{
   row-gap: 0px;
+}
+
+.gap-x-4{
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+}
+
+.gap-y-10{
+  row-gap: 2.5rem;
 }
 
 .overflow-hidden{
@@ -3782,14 +3794,14 @@ body[dir="rtl"] .checkbox:checked,
   line-height: 1;
 }
 
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .font-bold{
