Fixes and searchbar improvements
Fixed smaller things, and added more fields and improvements to the coin searchbar

--- a/Website/templates/base.html
+++ b/Website/templates/base.html
@@ -24,7 +24,7 @@
                         </a>
                     </div>
                     <div class="navbar-end">
-                        <label for="my-drawer" class="btn btn-outline drawer-button">MENÚ</label>
+                        <label for="my-drawer" class="btn btn-lg btn-outline drawer-button">MENÚ</label>
                     </div>
                 </div>
             </header>
