--- a/Website/templates/moneda.html
+++ b/Website/templates/moneda.html
@@ -7,7 +7,8 @@
 {% block content %}
     <div class="py-30">
         <h1 class="text-2xl">
-            {{ moneda["section_id"] }} - Cádiz - Roma - RIIC-2020
+            {{ moneda.get("section_id") }} - {{ moneda.get("mint")[0] }}
+                        - {{ moneda.get("catalogue_type_mint")[0] }}
         </h1>
         <div class="grid grid-cols-4 gap-x-4 gap-y-10">
             <div class="row-span-3">
