--- a/Website/templates/searchbar.html
+++ b/Website/templates/searchbar.html
@@ -17,11 +17,9 @@
                         <span class="label-text">Material</span>
                     </label>
                     <select id="materiales" class="select select-bordered" name="material">
-                        <option value="" selected="{{ "True" if session.get("material") in [None, ""] else "False" }}">
-                            Seleccionar
-                        </option>
+                        <option value="" selected>Seleccionar</option>
                         {% for m in mats %}
-                            <option selected="{{ "True" if session.get("search")["material"] == m else "False" }}">{{ m }}</option>
+                            <option>{{ m }}</option>
                         {% endfor %}
                     </select>
                 </div>
@@ -33,22 +31,34 @@
                            name="hallazgo">
                 </div>
             </div>
-            <label class="label" for="tipos">
+            <div class="grid grid-cols-2 gap-x-5">
+                <div>
+                    <label class="label" for="tipos">
                         <span class="label-text">Tipo</span>
-            </label>
-            <input id="tipos" class="input input-md input-bordered w-full max-w">
+                    </label>
+                    <input id="tipos" class="input input-md input-bordered w-full max-w" name="tipos">
+                </div>
+                <div>
+                    <label class="label" for="ceca">
+                        <span class="label-text">Ceca</span>
+                    </label>
+                    <input id="ceca" class="input input-md input-bordered w-full max-w" name="ceca">
+                </div>
+            </div>
+        <br>
             <input type="submit" class="btn w-1/3" value="Buscar" name="Buscar">
             <a href="/buscador/reiniciar" class="w-1/4"><input type="button" class="btn btn-outline" value="Reiniciar"></a>
         </form>
     </div>
+    <br>
     <div class="grid grid-cols-2">
         <div class="btn-group" id="paginador">
             <form method="post">
                 <button type="submit" class="btn" name="pagina" value="0">INICIO</button>
-                {% if page > 0 %}
+                {% if page > 1 %}
                     <button type="submit" class="btn" name="pagina"
                             value="{{ page - 2 }}">{{ page - 1 }}</button>{% endif %}
-                {% if page > 1 %}
+                {% if page > 0 %}
                     <button type="submit" class="btn" name="pagina"
                             value="{{ page - 1 }}">{{ page }}</button>{% endif %}
                 <button type="submit" name="pagina" value="{{ page }}" class="btn btn-active">{{ page + 1 }}</button>
@@ -61,12 +71,13 @@
                 <button type="submit" class="btn" name="pagina" value="{{ n_pages - 1 }}">FIN</button>
             </form>
         </div>
-        <p class="text-xl">Mostrando 1-10 de 100 monedas</p>
+        <p class="text-xl">Mostrando {{ page * 100 + 1 }}-{% if (1 + page) * 100 <= n_monedas %}{{ (page + 1) * 100 }}{% else %}{{ n_monedas }}
+            {% endif %} de {{ n_monedas }} monedas</p>
     </div>
 
     <div class="grid grid-cols-2 align-content-end m-top-5">
         {% for i in monedas %}
-            <a href="/moneda/{{ i.get("section_id") }}">
+            <a target="_blank" href="/moneda/{{ i.get("section_id") }}">
                 <div>
                     <div class="card card-side bg-base-100 shadow-xl h-48 w-auto m-5">
                         <figure class="h-auto w-1/3 w-auto object-contain">
@@ -76,8 +87,9 @@
                                  class="w-1/2"/>
                         </figure>
                         <div class="card-body">
-                            <h2 class="card-title">{{ i.get("number", "S/N") }}</h2>
-                            <p>{{ i.get("section_id") }}</p>
+                            <h2 class="card-title">{{ i.get("number", "Sin número") }}</h2>
+                            <p>{{ i.get("section_id") }} - {{ i.get("mint")[0] }}
+                        - {{ i.get("catalogue_type_mint")[0] }}</p>
                         </div>
                     </div>
                 </div>
