Graphics, lists and fixes
Finished graphics creator, added hoard and treasure list, multiple fixes

--- a/Website/templates/base.html
+++ b/Website/templates/base.html
@@ -47,8 +47,11 @@
         <label for="my-drawer" class="drawer-overlay"></label>
         <ul class="menu p-4 w-80 bg-base-100 text-base-content">
             <li><a href="/inicio">Menú</a></li>
-            <li><a href="/buscador">Catálogo</a></li>
-            <li><a>Mapa</a></li>
+            <li><a href="/buscador">Catálogo de monedas</a></li>
+            <li><a href="/tesoros">Tesoros</a></li>
+            <li><a href="/hallazgos">Hallazgos</a></li>
+            <li><a href="mapa_cecas.html">Cecas</a></li>
+            <li><a href="/mapa">Mapa</a></li>
             <li><a href="/graficos">Gráficos</a></li>
         </ul>
     </div>
