--- a/Website/static/src/tail.css
+++ b/Website/static/src/tail.css
@@ -1910,44 +1910,6 @@ html{
   border-radius: var(--rounded-btn, 0.5rem);
 }
 
-.collapse{
-  position: relative;
-  display: grid;
-  overflow: hidden;
-}
-
-.collapse-title, 
-.collapse > input[type="checkbox"], 
-.collapse-content{
-  grid-column-start: 1;
-  grid-row-start: 1;
-}
-
-.collapse > input[type="checkbox"]{
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  opacity: 0;
-}
-
-.collapse-content{
-  grid-row-start: 2;
-  overflow: hidden;
-  max-height: 0px;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  cursor: unset;
-  transition: padding 0.2s ease-in-out, background-color 0.2s ease-in-out;
-}
-
-.collapse-open .collapse-content,
-.collapse:focus:not(.collapse-close) .collapse-content,
-.collapse:not(.collapse-close)
-  input[type="checkbox"]:checked
-  ~ .collapse-content{
-  max-height: 9000px;
-}
-
 .drawer{
   display: grid;
   width: 100%;
@@ -2946,80 +2908,6 @@ body[dir="rtl"] .checkbox:checked,
   background-image: linear-gradient(45deg, transparent 65%, hsl(var(--chkbg)) 65.99%), linear-gradient(-45deg, transparent 75%, hsl(var(--chkbg)) 75.99%), linear-gradient(45deg, hsl(var(--chkbg)) 40%, transparent 40.99%), linear-gradient(-45deg, hsl(var(--chkbg)) 30%, hsl(var(--chkfg)) 30.99%, hsl(var(--chkfg)) 40%, transparent 40.99%), linear-gradient(45deg, hsl(var(--chkfg)) 50%, hsl(var(--chkbg)) 50.99%);
 }
 
-.collapse:focus-visible{
-  outline: 2px solid hsl(var(--nf));
-  outline-offset: 2px;
-}
-
-.collapse-arrow .collapse-title:after{
-  position: absolute;
-  display: block;
-  height: 0.5rem;
-  width: 0.5rem;
-  transition-property: all;
-  transition-duration: 150ms;
-  transition-duration: 0.2s;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  top: 1.4rem;
-  right: 1.4rem;
-  content: "";
-  transform-origin: 75% 75%;
-  transform: rotate(45deg);
-  box-shadow: 2px 2px;
-  pointer-events: none;
-}
-
-.collapse-plus .collapse-title:after{
-  position: absolute;
-  display: block;
-  height: 0.5rem;
-  width: 0.5rem;
-  transition-property: all;
-  transition-duration: 300ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  top: 0.9rem;
-  right: 1.4rem;
-  content: "+";
-  pointer-events: none;
-}
-
-.collapse:not(.collapse-open):not(.collapse-close) input[type="checkbox"], 
-.collapse:not(.collapse-open):not(.collapse-close) .collapse-title{
-  cursor: pointer;
-}
-
-.collapse:focus:not(.collapse-open):not(.collapse-close) .collapse-title{
-  cursor: unset;
-}
-
-.collapse-title, 
-.collapse > input[type="checkbox"]{
-  width: 100%;
-  padding: 1rem;
-  padding-right: 3rem;
-  min-height: 3.75rem;
-  transition: background-color 0.2s ease-in-out;
-}
-
-.collapse-open :where(.collapse-content), 
-.collapse:focus:not(.collapse-close) :where(.collapse-content), 
-.collapse:not(.collapse-close) :where(input[type="checkbox"]:checked ~ .collapse-content){
-  padding-bottom: 1rem;
-  transition: padding 0.2s ease-in-out, background-color 0.2s ease-in-out;
-}
-
-.collapse-open.collapse-arrow .collapse-title:after,
-.collapse-arrow:focus:not(.collapse-close) .collapse-title:after,
-.collapse-arrow:not(.collapse-close) input[type="checkbox"]:checked ~ .collapse-title:after{
-  transform: rotate(225deg);
-}
-
-.collapse-open.collapse-plus .collapse-title:after,
-.collapse-plus:focus:not(.collapse-close) .collapse-title:after,
-.collapse-plus:not(.collapse-close) input[type="checkbox"]:checked ~ .collapse-title:after{
-  content: "−";
-}
-
 .drawer.drawer-end > .drawer-toggle:checked ~ .drawer-content{
   --tw-translate-x: -0.5rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -3720,24 +3608,20 @@ body[dir="rtl"] .checkbox:checked,
   width: 100%;
 }
 
-.w-auto{
-  width: auto;
-}
-
-.w-1\/2{
-  width: 50%;
-}
-
-.w-5\/6{
-  width: 83.333333%;
-}
-
 .w-1\/3{
   width: 33.333333%;
 }
 
 .w-1\/4{
   width: 25%;
+}
+
+.w-auto{
+  width: auto;
+}
+
+.w-1\/2{
+  width: 50%;
 }
 
 .max-w-xs{
@@ -3816,17 +3700,8 @@ body[dir="rtl"] .checkbox:checked,
   border-radius: 0.5rem;
 }
 
-.border{
-  border-width: 1px;
-}
-
 .border-transparent{
   border-color: transparent;
-}
-
-.border-base-300{
-  --tw-border-opacity: 1;
-  border-color: hsl(var(--b3, var(--b2)) / var(--tw-border-opacity));
 }
 
 .bg-cabecera{
@@ -3842,6 +3717,11 @@ body[dir="rtl"] .checkbox:checked,
 .bg-base-100{
   --tw-bg-opacity: 1;
   background-color: hsl(var(--b1) / var(--tw-bg-opacity));
+}
+
+.bg-base-300{
+  --tw-bg-opacity: 1;
+  background-color: hsl(var(--b3, var(--b2)) / var(--tw-bg-opacity));
 }
 
 .bg-wondercoins{
@@ -3916,10 +3796,6 @@ body[dir="rtl"] .checkbox:checked,
 
 .font-bold{
   font-weight: 700;
-}
-
-.font-medium{
-  font-weight: 500;
 }
 
 .text-blanco{
