--- a/Website/templates/mapa.html
+++ b/Website/templates/mapa.html
@@ -5,5 +5,36 @@
 <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js" integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
 {% endblock %}
 {% block content %}
-    <div id="map" class="h-5/6 w-5/6"></div>
+    <div id="map" class="h-full w-full"></div>
+    <script src="../static/mapa.js"></script>
+    <script>
+    const greenIcon = new L.Icon({
+            iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-green.png',
+            shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png',
+            iconSize: [25, 41],
+            iconAnchor: [12, 41],
+            popupAnchor: [1, -34],
+            shadowSize: [41, 41]
+        });
+    const redIcon = new L.Icon({
+            iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-red.png',
+            shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png',
+            iconSize: [25, 41],
+            iconAnchor: [12, 41],
+            popupAnchor: [1, -34],
+            shadowSize: [41, 41]
+        });
+    {% for i in cecas %}
+        L.marker([{{ i["map"]["lat"] }}, {{ i["map"]["lon"] }}]).addTo(map).
+        bindPopup('<a target=blank_ href="/ceca/{{ i["section_id"] }}">{{ i["name"] }}</a>');
+    {% endfor %}
+    {% for i in hallazgos %}
+        L.marker([{{ i["map"]["lat"] }}, {{ i["map"]["lon"] }}], {icon: greenIcon}).addTo(map).
+        bindPopup('<a target=blank_ href="/hallazgo/{{ i["section_id"] }}">{{ i["name"] }}</a>');
+    {% endfor %}
+    {% for i in tesoros %}
+        L.marker([{{ i["map"]["lat"] }}, {{ i["map"]["lon"] }}], {icon: redIcon}).addTo(map).
+        bindPopup('<a target=blank_ href="/tesoro/{{ i["section_id"] }}">{{ i["name"] }}</a>');
+    {% endfor %}
+    </script>
 {% endblock %}
