--- a/Website/static/src/tail.css
+++ b/Website/static/src/tail.css
@@ -2101,6 +2101,15 @@ html{
   gap: 0.5rem;
 }
 
+.footer-center{
+  place-items: center;
+  text-align: center;
+}
+
+.footer-center > *{
+  place-items: center;
+}
+
 @media (min-width: 48rem){
   .footer{
     grid-auto-flow: column;
@@ -2276,21 +2285,6 @@ html{
   border-color: hsl(var(--bc) / var(--tw-border-opacity));
   --tw-border-opacity: 0.2;
   transition: background, box-shadow var(--animation-input, 0.2s) ease-in-out;
-}
-
-.range{
-  height: 1.5rem;
-  width: 100%;
-  cursor: pointer;
-  -webkit-appearance: none;
-  --range-shdw: var(--bc);
-  overflow: hidden;
-  background-color: transparent;
-  border-radius: var(--rounded-box, 1rem);
-}
-
-.range:focus{
-  outline: none;
 }
 
 .select{
@@ -2963,13 +2957,6 @@ body[dir="rtl"] .checkbox:checked,
   outline: 2px solid currentColor;
 }
 
-.footer-title{
-  margin-bottom: 0.5rem;
-  font-weight: 700;
-  text-transform: uppercase;
-  opacity: 0.5;
-}
-
 .label-text{
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -3258,58 +3245,6 @@ body[dir="rtl"] .checkbox:checked,
   }
 }
 
-.range:focus-visible::-webkit-slider-thumb{
-  --focus-shadow: 0 0 0 6px hsl(var(--b1)) inset, 0 0 0 2rem hsl(var(--range-shdw)) inset;
-}
-
-.range:focus-visible::-moz-range-thumb{
-  --focus-shadow: 0 0 0 6px hsl(var(--b1)) inset, 0 0 0 2rem hsl(var(--range-shdw)) inset;
-}
-
-.range::-webkit-slider-runnable-track{
-  height: 0.5rem;
-  width: 100%;
-  border-radius: var(--rounded-box, 1rem);
-  background-color: hsla(var(--bc) / 0.1);
-}
-
-.range::-moz-range-track{
-  height: 0.5rem;
-  width: 100%;
-  border-radius: var(--rounded-box, 1rem);
-  background-color: hsla(var(--bc) / 0.1);
-}
-
-.range::-webkit-slider-thumb{
-  background-color: hsl(var(--b1));
-  position: relative;
-  height: 1.5rem;
-  width: 1.5rem;
-  border-style: none;
-  border-radius: var(--rounded-box, 1rem);
-  -webkit-appearance: none;
-  top: 50%;
-  color: hsl(var(--range-shdw));
-  transform: translateY(-50%);
-  --filler-size: 100rem;
-  --filler-offset: 0.6rem;
-  box-shadow: 0 0 0 3px hsl(var(--range-shdw)) inset, var(--focus-shadow, 0 0), calc(var(--filler-size) * -1 - var(--filler-offset)) 0 0 var(--filler-size);
-}
-
-.range::-moz-range-thumb{
-  background-color: hsl(var(--b1));
-  position: relative;
-  height: 1.5rem;
-  width: 1.5rem;
-  border-style: none;
-  border-radius: var(--rounded-box, 1rem);
-  top: 50%;
-  color: hsl(var(--range-shdw));
-  --filler-size: 100rem;
-  --filler-offset: 0.5rem;
-  box-shadow: 0 0 0 3px hsl(var(--range-shdw)) inset, var(--focus-shadow, 0 0), calc(var(--filler-size) * -1 - var(--filler-offset)) 0 0 var(--filler-size);
-}
-
 @-webkit-keyframes rating-pop{
   0%{
     transform: translateY(-0.125em);
@@ -3511,6 +3446,10 @@ body[dir="rtl"] .checkbox:checked,
   grid-row: span 3 / span 3;
 }
 
+.m-0{
+  margin: 0px;
+}
+
 .m-5{
   margin: 1.25rem;
 }
@@ -3523,6 +3462,11 @@ body[dir="rtl"] .checkbox:checked,
 .my-2{
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+}
+
+.mx-\[10\%\]{
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 .mx-auto{
@@ -3580,22 +3524,6 @@ body[dir="rtl"] .checkbox:checked,
   height: min-content;
 }
 
-.h-48{
-  height: 12rem;
-}
-
-.h-1\.5{
-  height: 0.375rem;
-}
-
-.h-1{
-  height: 0.25rem;
-}
-
-.h-2{
-  height: 0.5rem;
-}
-
 .w-2\/3{
   width: 66.666667%;
 }
@@ -3624,6 +3552,10 @@ body[dir="rtl"] .checkbox:checked,
   width: 50%;
 }
 
+.w-1\/5{
+  width: 20%;
+}
+
 .max-w-xs{
   max-width: 20rem;
 }
@@ -3640,22 +3572,20 @@ body[dir="rtl"] .checkbox:checked,
   list-style-type: disc;
 }
 
-.appearance-none{
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
+.grid-flow-col{
+  grid-auto-flow: column;
 }
 
 .grid-cols-2{
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
-.grid-cols-3{
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
 .grid-cols-4{
   grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
+.grid-cols-3{
+  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
 .grid-cols-1{
@@ -3664,6 +3594,14 @@ body[dir="rtl"] .checkbox:checked,
 
 .flex-col{
   flex-direction: column;
+}
+
+.items-center{
+  align-items: center;
+}
+
+.justify-between{
+  justify-content: space-between;
 }
 
 .gap-5{
@@ -3688,20 +3626,16 @@ body[dir="rtl"] .checkbox:checked,
   row-gap: 2.5rem;
 }
 
+.gap-y-3{
+  row-gap: 0.75rem;
+}
+
 .overflow-hidden{
   overflow: hidden;
 }
 
 .rounded-sm{
   border-radius: 0.125rem;
-}
-
-.rounded-lg{
-  border-radius: 0.5rem;
-}
-
-.border-transparent{
-  border-color: transparent;
 }
 
 .bg-cabecera{
