--- a/Website/templates/moneda.html
+++ b/Website/templates/moneda.html
@@ -68,26 +68,26 @@
                 <p></p>
             </div>
         </div>
-        <div class="grid grid-cols-2 gap-x-4 gap-y-10">
+        <div class="grid grid-cols-2 gap-x-4 gap-y-3">
             <div>
                 <h2>Leyenda Anverso</h2>
                 <hr>
-                <p></p>
+                <p>{{ moneda["l_anverso"] }}</p>
             </div>
             <div>
                 <h2>Leyenda Reverso</h2>
                 <hr>
-                <p></p>
+                <p>{{ moneda["l_reverso"] }}</p>
             </div>
             <div>
                 <h2>Descripción Anverso</h2>
                 <hr>
-                <p></p>
+                <p>{{ moneda["d_anverso"] }}</p>
             </div>
             <div>
                 <h2>Descripción Reverso</h2>
                 <hr>
-                <p></p>
+                <p>{{ moneda["d_reverso"] }}</p>
             </div>
         </div>
         <div class="grid grid-cols-1 gap-x-4 gap-y-10">
