--- a/Website/templates/searchbar.html
+++ b/Website/templates/searchbar.html
@@ -45,56 +45,62 @@
                     <input id="ceca" class="input input-md input-bordered w-full max-w" name="ceca">
                 </div>
             </div>
-        <br>
+            <br>
             <input type="submit" class="btn w-1/3" value="Buscar" name="Buscar">
             <a href="/buscador/reiniciar" class="w-1/4"><input type="button" class="btn btn-outline" value="Reiniciar"></a>
         </form>
     </div>
     <br>
-    <div class="grid grid-cols-2">
-        <div class="btn-group" id="paginador">
-            <form method="post">
-                <button type="submit" class="btn" name="pagina" value="0">INICIO</button>
-                {% if page > 1 %}
-                    <button type="submit" class="btn" name="pagina"
-                            value="{{ page - 2 }}">{{ page - 1 }}</button>{% endif %}
-                {% if page > 0 %}
-                    <button type="submit" class="btn" name="pagina"
-                            value="{{ page - 1 }}">{{ page }}</button>{% endif %}
-                <button type="submit" name="pagina" value="{{ page }}" class="btn btn-active">{{ page + 1 }}</button>
-                {% if page < n_pages - 1 %}
-                    <button type="submit" class="btn" name="pagina"
-                            value="{{ page + 1 }}">{{ page + 2 }}</button> {% endif %}
-                {% if page < n_pages - 2 %}
-                    <button type="submit" class="btn" name="pagina"
-                            value="{{ page + 2 }}">{{ page + 3 }}</button> {% endif %}
-                <button type="submit" class="btn" name="pagina" value="{{ n_pages - 1 }}">FIN</button>
-            </form>
-        </div>
-        <p class="text-xl">Mostrando {{ page * 100 + 1 }}-{% if (1 + page) * 100 <= n_monedas %}{{ (page + 1) * 100 }}{% else %}{{ n_monedas }}
+    {% if monedas|length > 0 %}
+        <div class="grid grid-cols-2">
+            <div class="btn-group" id="paginador">
+                <form method="post">
+                    <button type="submit" class="btn" name="pagina" value="0">INICIO</button>
+                    {% if page > 1 %}
+                        <button type="submit" class="btn" name="pagina"
+                                value="{{ page - 2 }}">{{ page - 1 }}</button>{% endif %}
+                    {% if page > 0 %}
+                        <button type="submit" class="btn" name="pagina"
+                                value="{{ page - 1 }}">{{ page }}</button>{% endif %}
+                    <button type="submit" name="pagina" value="{{ page }}"
+                            class="btn btn-active">{{ page + 1 }}</button>
+                    {% if page < n_pages - 1 %}
+                        <button type="submit" class="btn" name="pagina"
+                                value="{{ page + 1 }}">{{ page + 2 }}</button> {% endif %}
+                    {% if page < n_pages - 2 %}
+                        <button type="submit" class="btn" name="pagina"
+                                value="{{ page + 2 }}">{{ page + 3 }}</button> {% endif %}
+                    <button type="submit" class="btn" name="pagina" value="{{ n_pages - 1 }}">FIN</button>
+                </form>
+            </div>
+            <p class="text-xl">Mostrando {{ page * 100 + 1 }}-{% if (1 + page) * 100 <= n_monedas %}
+                {{ (page + 1) * 100 }}{% else %}{{ n_monedas }}
             {% endif %} de {{ n_monedas }} monedas</p>
-    </div>
+        </div>
 
-    <div class="grid grid-cols-2 align-content-end m-top-5">
-        {% for i in monedas %}
-            <a target="_blank" href="/moneda/{{ i.get("section_id") }}">
-                <div>
-                    <div class="card card-side bg-base-100 shadow-xl h-48 w-auto m-5">
-                        <figure class="h-auto w-1/3 w-auto object-contain">
-                            <img src="{{ i.get("image_obverse") }}" alt="../static/logo-sinletras-sinfondo.jpg"
-                                 class="w-1/2"/>
-                            <img src="{{ i.get("image_reverse") }}" alt="../static/logo-sinletras-sinfondo.jpg"
-                                 class="w-1/2"/>
-                        </figure>
-                        <div class="card-body">
-                            <h2 class="card-title">{{ i.get("number", "Sin número") }}</h2>
-                            <p>{{ i.get("section_id") }} - {{ i.get("mint")[0] }}
-                        - {{ i.get("catalogue_type_mint")[0] }}</p>
+        <div class="grid grid-cols-2 align-content-end m-top-5">
+            {% for i in monedas %}
+                <a target="_blank" href="/moneda/{{ i.get("section_id") }}">
+                    <div>
+                        <div class="card card-side bg-base-100 shadow-xl h-full w-auto m-5">
+                            <figure class="h-auto w-1/5 w-auto object-contain">
+                                <img src="{{ i.get("image_obverse") }}" alt="../static/logo-sinletras-sinfondo.jpg"
+                                     class="w-1/2"/>
+                                <img src="{{ i.get("image_reverse") }}" alt="../static/logo-sinletras-sinfondo.jpg"
+                                     class="w-1/2"/>
+                            </figure>
+                            <div class="card-body">
+                                <h2 class="card-title">{{ i.get("number", "Sin número") }}</h2>
+                                <p>{{ i.get("section_id") }} - {{ i.get("mint")[0] }}
+                                    - {{ i.get("catalogue_type_mint")[0] }}</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </a>
+                </a>
 
-        {% endfor %}
-    </div>
+            {% endfor %}
+        </div>
+    {% else %}
+        <p class="text-4xl">No se han encontrado monedas</p>
+    {% endif %}
 {% endblock %}
