--- a/Website/templates/tipo.html
+++ b/Website/templates/tipo.html
@@ -65,7 +65,9 @@
     </div>
     <h2>URI:</h2>
     <hr>
+    {% if tipo.get("uri")|length > 1 %}
     <a target="_blank" href="{{ tipo.get("uri")[1].strip() }}"><h2>{{ tipo.get("uri")[1].strip() }}</h2></a>
+    {% endif %}
     <h1 class="text-2xl pt-10">Monedas:</h1>
     <div class="grid grid-cols-3 gap-x-5 gap-y-0 h-1/2">
         {% for i in tipo.get("monedas") %}
